# ga4gh-infra

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  justfile  release.toml
.cargo/: config.toml
.github/: dependabot.yml
config/: admin-ui.example.toml  ads.example.toml  agreement-registry.example.toml  all-in-one.africa.toml.example  all-in-one.example.toml  all-in-one.native.toml.example  broker.example.toml  broker.keycloak.example.toml  duo-service.example.toml  env.native.example  production.env.example  sample-resource.example.toml  service-registry.example.toml  visa-registry.example.toml
crates/aai-broker/: Cargo.toml
crates/aai-broker/src/: ads.rs  app.rs  config.rs  error.rs  identity.rs  keys.rs  lib.rs  main.rs  passport.rs  profile.rs  session.rs  startup.rs  test_support.rs  upstream.rs  visas.rs
crates/aai-broker/src/handlers/: callback.rs  login.rs  mod.rs  oidc.rs  service_info.rs
crates/access-decision-service/: Cargo.toml
crates/access-decision-service/migrations/: 001_init.sql  002_dac_group.sql  003_visibility_resource_type.sql  004_remote_drs_base_url.sql
crates/access-decision-service/src/: app.rs  auth.rs  config.rs  duo.rs  error.rs  events.rs  lib.rs  main.rs  permissions.rs  query.rs  startup.rs  store.rs  visa_registry_client.rs  visas.rs
crates/access-decision-service/src/handlers/: access_requests.rs  audit.rs  catalog.rs  dac.rs  datasets.rs  duo.rs  grants.rs  introspect.rs  me.rs  mod.rs  permissions.rs  projects.rs  researchers.rs  service_info.rs  sync.rs
crates/admin-ui/: Cargo.toml
crates/admin-ui/src/: app.rs  clients.rs  config.rs  csv.rs  datetime.rs  duo.rs  entity.rs  error.rs  events.rs  health.rs  lib.rs  main.rs  roles.rs  session.rs  state.rs
crates/admin-ui/src/handlers/: agreements.rs  audit.rs  auth.rs  dac.rs  dashboard.rs  datasets.rs  grants.rs  mod.rs  projects.rs  researchers.rs  service_info.rs  services.rs  system.rs
crates/admin-ui/static/: admin.css  htmx.min.js
crates/admin-ui/templates/agreements/: index.html
crates/admin-ui/templates/audit/: list.html
crates/admin-ui/templates/auth/: callback.html  login.html
crates/admin-ui/templates/dac/: queue_page.html  queue_partial.html  queue_row.html
crates/admin-ui/templates/dashboard/: index.html
crates/admin-ui/templates/datasets/: detail.html  list.html
crates/admin-ui/templates/grants/: list.html
crates/admin-ui/templates/layout/: base.html
crates/admin-ui/templates/projects/: detail.html  list.html
crates/admin-ui/templates/researchers/: search.html
crates/admin-ui/templates/services/: list.html
crates/admin-ui/templates/system/: index.html
crates/agreement-registry/: Cargo.toml
crates/agreement-registry/seeds/: bbmri-registered-access-illustrative-v1.json  duos-dbgap-gru-ncu-v1.json  ega-disease-specific-mondo-v1.json  ega-general-research-use-v1.json  ega-health-medical-biomedical-v1.json
crates/agreement-registry/src/: app.rs  config.rs  demo_profiles.rs  error.rs  http_error.rs  lib.rs  main.rs  registry.rs  seeds.rs  startup.rs
crates/agreement-registry/src/handlers/: compatibility.rs  decisions.rs  mod.rs  profiles.rs  service_info.rs  templates.rs
crates/agreement-registry/tests/: compatibility.rs
crates/duo-service/: Cargo.toml  build.rs
crates/duo-service/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  matcher.rs  startup.rs  terms.rs
crates/duo-service/src/handlers/: match_handler.rs  mod.rs  service_info.rs  terms.rs
crates/ga4gh-clearinghouse/: CHANGELOG.md  Cargo.toml  README.md
crates/ga4gh-clearinghouse/src/: axum.rs  clearinghouse.rs  config.rs  error.rs  jwks.rs  lib.rs  policy.rs  token.rs
crates/ga4gh-clearinghouse/tests/: integration.rs  support.rs
crates/ga4gh-clearinghouse/tests/fixtures/: README.md
crates/ga4gh-dev-seed/: Cargo.toml
crates/ga4gh-dev-seed/src/: config.rs  lib.rs  main.rs  seed.rs
crates/ga4gh-e2e/: Cargo.toml
crates/ga4gh-e2e/tests/: admin_ui_flow.rs  ads_flow.rs  stack.rs  support.rs
crates/ga4gh-infra-cli/: Cargo.toml
crates/ga4gh-infra-cli/src/: africa.rs  all_in_one.rs  keygen.rs  lib.rs  main.rs
crates/ga4gh-types/: CHANGELOG.md  Cargo.toml  README.md
crates/ga4gh-types/src/: ads.rs  agreement.rs  compatibility.rs  duo.rs  health.rs  lib.rs  passport.rs  service_info.rs  visa.rs
crates/mock-idp/: Cargo.toml
crates/mock-idp/src/: idp.rs  lib.rs  main.rs
crates/sample-resource/: Cargo.toml
crates/sample-resource/src/: ads.rs  app.rs  config.rs  datasets.rs  duo.rs  error.rs  lib.rs  main.rs  startup.rs
crates/sample-resource/src/handlers/: datasets.rs  mod.rs  service_info.rs
crates/sample-resource/tests/: router.rs
crates/service-registry/: Cargo.toml
crates/service-registry/migrations/: 001_init.sql
crates/service-registry/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  startup.rs  store.rs  types.rs
crates/service-registry/src/handlers/: mod.rs  service_info.rs  services.rs
crates/visa-registry/: Cargo.toml
crates/visa-registry/migrations/: 001_init.sql
crates/visa-registry/src/: app.rs  auth.rs  config.rs  error.rs  keys.rs  lib.rs  main.rs  startup.rs  store.rs  test_support.rs  visa.rs
crates/visa-registry/src/handlers/: health.rs  jwks.rs  mod.rs  service_info.rs  visas.rs
docker/: .env.example  Dockerfile.access-decision-service  Dockerfile.admin-ui  Dockerfile.agreement-registry  Dockerfile.all-in-one  Dockerfile.broker  Dockerfile.duo-service  Dockerfile.mock-idp  Dockerfile.register  Dockerfile.sample-resource  Dockerfile.service-registry  Dockerfile.visa-registry  README.md  docker-compose.prod.example.yml  docker-compose.sqlite.yml  docker-compose.yml
docs/: AFRICA-DEPLOYMENT.md  DECISIONS.md  ECOSYSTEM.md  README.md  architecture.md  configuration.md  contributing.md  deployment-scenarios.md  design-decisions.md  getting-started.md  limitations.md  production-deployment.md  roadmap.md  versioning.md
scripts/: e2e.sh  (+6 more)
tests/integration/: Cargo.toml
tests/integration/tests/: ads_postgres.rs  all_in_one.rs  visa_registry_postgres.rs
(+55 files in other folders)
