[workspace]
resolver = "2"
members = [
    "crates/ga4gh-types",
    "crates/ga4gh-clearinghouse",
    "crates/aai-broker",
    "crates/visa-registry",
    "crates/duo-service",
    "crates/service-registry",
    "crates/access-decision-service",
    "crates/mock-idp",
    "crates/sample-resource",
    "crates/ga4gh-infra-cli",
    "crates/agreement-registry",
    "crates/ga4gh-e2e",
    "crates/ga4gh-dev-seed",
    "crates/admin-ui",
    "tests/integration",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/SynapticFour/ga4gh-infra"
authors = ["SynapticFour"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.7", features = ["trace", "fs"] }
askama = "0.12"
askama_axum = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
url = "2"
toml = "0.8"

ga4gh-types = { path = "crates/ga4gh-types", version = "0.1.0" }
ga4gh-clearinghouse = { path = "crates/ga4gh-clearinghouse", version = "0.1.0" }
