[package]
name = "admin-ui"
version = "0.1.0"
edition = "2021"
description = "Server-rendered GA4GH infrastructure admin dashboard"

[[bin]]
name = "admin-ui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
ga4gh-types = { path = "../ga4gh-types" }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
async-trait = "0.1"
