[package]
name = "agreement-registry"
description = "Policy profile and agreement template registry for GA4GH DUO compatibility (optional component)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[package.metadata.release]
publish = false
tag-name = "agreement-registry-v{{version}}"

[lib]
name = "agreement_registry"

[dependencies]
ga4gh-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }
