[package]
name = "agreement-registry"
description = "Policy profile and agreement template registry for GA4GH DUO compatibility (optional component)"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[package.metadata.release]
publish = false
tag-name = "agreement-registry-v{{version}}"

[lib]
name = "agreement_registry"
path = "src/lib.rs"

[[bin]]
name = "agreement-registry"
path = "src/main.rs"

[dependencies]
ga4gh-types = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
