[package]
name = "duo-service"
description = "Data Use Ontology term resolution and matching API"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.release]
publish = false
tag-name = "duo-service-v{{version}}"

[lib]
name = "duo_service"
path = "src/lib.rs"

[[bin]]
name = "duo-service"
path = "src/main.rs"

[dependencies]
ga4gh-types = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }

[build-dependencies]
quick-xml = "0.40"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
