[package]
name = "ga4gh-clearinghouse"
description = "GA4GH Passport and Visa validation library for resource services"
readme = "README.md"
keywords = ["ga4gh", "passport", "visa", "jwt", "genomics"]
categories = ["authentication", "web-programming"]
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.release]
publish = true
tag-name = "ga4gh-clearinghouse-v{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}"
exactly = 1
prerelease = false

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[Unreleased\\]:"
replace = "[{{version}}]:"
exactly = 1
prerelease = false

[dependencies]
ga4gh-types = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[features]
default = []
axum = ["dep:axum", "dep:axum-core", "dep:http"]

[dependencies.axum]
workspace = true
optional = true

[dependencies.axum-core]
version = "0.4"
optional = true

[dependencies.http]
version = "1"
optional = true

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
serde_json = { workspace = true }
rsa = { version = "0.9", features = ["pem", "sha2"] }
rand = "0.8"
rand_chacha = "0.9"
sha2 = { workspace = true }
