[package]
name = "ga4gh-dev-seed"
description = "Idempotent demo data seeding for local and test GA4GH stacks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[package.metadata.release]
release = false

[[bin]]
name = "seed-dev-stack"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ga4gh-types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
