[package]
name = "ga4gh-e2e"
description = "End-to-end integration tests for the ga4gh-infra docker stack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[package.metadata.release]
release = false

[dev-dependencies]
ga4gh-clearinghouse = { workspace = true }
ga4gh-types = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
