[package]
name = "mock-idp"
description = "Minimal OIDC identity provider for local integration testing"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.release]
release = false

[[bin]]
name = "mock-idp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rsa = { version = "0.9", features = ["pem", "sha2"] }
url = "2"
