[package]
name = "sample-resource"
description = "Reference GA4GH resource service using ga4gh-clearinghouse axum integration"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.release]
release = false

[lib]
name = "sample_resource"
path = "src/lib.rs"

[[bin]]
name = "sample-resource"
path = "src/main.rs"

[dependencies]
ga4gh-types = { workspace = true }
ga4gh-clearinghouse = { workspace = true, features = ["axum"] }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
config = { workspace = true }
