[package]
name = "service-registry"
description = "GA4GH Service Registry API"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.release]
publish = false
tag-name = "service-registry-v{{version}}"

[lib]
name = "service_registry"
path = "src/lib.rs"

[[bin]]
name = "service-registry"
path = "src/main.rs"

[features]
default = ["postgres", "sqlite"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
ga4gh-types = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
sqlx = { workspace = true, features = ["json", "migrate"] }
thiserror = { workspace = true }
tower-http = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
